--- a/clipdown/2023/webview/reward/resource/css/common.css
+++ b/clipdown/2023/webview/reward/resource/css/common.css
@@ -42,7 +42,7 @@ div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,butto
 html, body{width: 100%; height: 100%;}
 html{-ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%; }
 body{overflow-x: hidden; overflow-y: auto; -ms-overflow-style:none; -webkit-font-smoothing: antialiased;}
-textarea{width:100%;} 
+textarea{width:100%; resize: none;} 
 select, input, img, button{vertical-align:middle;}
 button{border: 0; background: transparent; cursor: pointer;}
 ol, ul, li{list-style-type:none;}
