--- a/clipdown/2023/webview/reward/resource/css/style_inflmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_inflmate.css
@@ -66,6 +66,7 @@ body{background: #202020;}
 .form_join .terms_link .link_text{padding-top: 0;}
 .form_join .form_list{border-bottom: 1px solid #f7f7f7;}
 .form_join .form_list .form_group{margin: 0; padding: 5px 0 0;}
+.form_join .form_list .m-radio-inline{line-height: 2; margin-bottom: 10px;}
 
 .help_block{display: block; margin: 5px 0;}
 .help_text{font-size: 11px; font-size: 1.1rem; color:#666;}
