--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -362,6 +362,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
     * APP Webview 캐시메이트 메인페이지
     * 클립다운라이트 앱에서만 노출
 */
+.section_mypage, .section_errorpage{min-height: 100%;}
 .webview_cashmate .section_mb .contents_top{display: none;}
 .webview_cashmate .section.section_mb .contents{padding: 20px 20px;}
 .webview_cashmate .section_mb{background: #F7F7F7; padding: 0;}
@@ -370,10 +371,27 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb .header_title{display: none;}
 .webview_cashmate .section_mb .contents_top{display: block;}
 .webview_cashmate .section_mb .tabs.tabs_nav{display: none;}
-.webview_cashmate .section_mb .tabs_multi{margin: 0;}
+.webview_cashmate .section_mb .tabs_multi{padding: 20px 20px; margin: 0;}
 .webview_cashmate .section_mb .form_list{height: auto; overflow-y: hidden;}
 
-.webview_cashmate .section_mb .content_mypoint{position: relative;}
+.webview_cashmate .section_mb.section .list_content{margin: 0;}
+.webview_cashmate .section_mb.section_mypage .contents{padding: 0;}
+.webview_cashmate .section_mb.section_mypage .guide_noti_box{text-align: left; padding: 20px 20px;}
+.webview_cashmate .section_mb.section_mypage .content_item{padding: 20px 20px;}
+.webview_cashmate .section_mb.section_mypage .content_item .form_group{padding: 10px 0 0;}
+.webview_cashmate .section_mb.section_mypage .content_item .input_group .btn_input{width: 100%; padding: 4px 10px; margin-top: 5px;}
+.webview_cashmate .section_mb.section_mypage .input_width_md{width: 100% !important;}
+.webview_cashmate .section_mb.section_mypage .btn_action{margin-top: 0; margin-left: 20px; margin-right: 20px;}
+
+.webview_cashmate .section_mb.section_point .contents{padding: 0;}
+.webview_cashmate .section_mb.section_point .guide_noti_box{padding: 20px 20px 10px;}
+.webview_cashmate .section_mb.section_point .content_reward_ad .category_menu{padding: 10px 20px;}
+.webview_cashmate .section_mb.section_point .content_reward_ad .content_list{height: auto; overflow-y: hidden; padding: 0 10px;}
+.webview_cashmate .section_mb.section_event .contents{padding: 0;}
+.webview_cashmate .section_mb.section_event .guide_noti_box{padding: 20px 20px;}
+.webview_cashmate .section_mb.section_event .content_event{padding: 20px 20px;}
+
+.webview_cashmate .section_mb .content_mypoint{position: relative; text-align: center; padding: 20px 20px;}
 .webview_cashmate .section_mb .content_mypoint .item_mypoint{display: inline-block; padding-right: 20px;}
 .webview_cashmate .section_mb .contents_top .content_mypoint .item_mypoint{padding: 0;}
 .webview_cashmate .section_mb .content_mypoint .item_mypoint .item_title{font-size: 15px; font-size: 1.5rem; font-weight: 600;}
@@ -388,15 +406,6 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb .content_menu_point .box_point .text_menu{font-size: 13px; font-size: 1.3rem; font-weight: 600; padding: 5px 0;}
 
 
-.webview_cashmate .section_mb.section .list_content{margin: 0;}
-.webview_cashmate .section_mb.section_mypage .contents{text-align: center;}
-.webview_cashmate .section_mb.section_point .contents{padding: 0;}
-.webview_cashmate .section_mb.section_point .guide_noti_box{padding: 20px 20px 10px;}
-.webview_cashmate .section_mb.section_point .content_reward_ad .category_menu{padding: 10px 20px;}
-.webview_cashmate .section_mb.section_point .content_reward_ad .content_list{height: auto; overflow-y: hidden; padding: 0 10px;}
-.webview_cashmate .section_mb.section_event .contents{padding: 0;}
-.webview_cashmate .section_mb.section_event .guide_noti_box{padding: 20px 20px;}
-.webview_cashmate .section_mb.section_event .content_event{padding: 20px 20px;}
 
 @media screen and (max-width: 640px){
 
