--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -381,7 +381,11 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb.section_mypage .content_item .form_group{padding: 10px 0 0;}
 .webview_cashmate .section_mb.section_mypage .content_item .input_group .btn_input{width: 100%; padding: 4px 10px; margin-top: 5px;}
 .webview_cashmate .section_mb.section_mypage .input_width_md{width: 100% !important;}
-.webview_cashmate .section_mb.section_mypage .btn_action{margin-top: 0; margin-left: 20px; margin-right: 20px;}
+.webview_cashmate .section_mb.section_mypage .btn_action{border: 0; padding: 20px 20px;}
+.webview_cashmate .section_mb.section_mypage .item_logout{text-align: center; padding: 20px 0;}
+.webview_cashmate .section_mb.section_mypage .item_logout p{font-size: 15px; font-size: 1.5rem; margin-bottom: 20px;}
+
+
 
 .webview_cashmate .section_mb.section_point .contents{padding: 0;}
 .webview_cashmate .section_mb.section_point .guide_noti_box{padding: 20px 20px 10px;}
