--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -376,8 +376,9 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb .form_list{height: auto; overflow-y: hidden;}
 
 .webview_cashmate .section_mb .contents_top .guide_noti_box .icon_noti{display: none;}
+.webview_cashmate .section_mb .contents_top .guide_noti_box .noti_title{font-size: 15px; font-size: 1.5rem;}
 .webview_cashmate .section_mb .contents_top .content_mypoint{position: relative; text-align: center; padding: 20px 0;}
-.webview_cashmate .section_mb .contents_top .content_mypoint .item_mypoint{display: inline-block; padding-right: 20px;}
+.webview_cashmate .section_mb .contents_top .content_mypoint .item_mypoint{display: inline-block;}
 .webview_cashmate .section_mb .contents_top .content_mypoint .item_mypoint .item_title{font-size: 15px; font-size: 1.5rem; font-weight: 600;}
 .webview_cashmate .section_mb .contents_top .content_mypoint .item_mypoint .item_point{font-size: 28px; font-size: 2.8rem; font-weight: 600; padding: 5px 0 0;}
 .webview_cashmate .section_mb .contents_top .content_mypoint .item_state_user{position: relative; float: right;}
@@ -388,13 +389,18 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb .content_menu_point .box_point .icon{position: relative; max-width: 52px; min-width: 48px; margin: 0 auto;}
 .webview_cashmate .section_mb .content_menu_point .box_point .text_menu{font-size: 13px; font-size: 1.3rem; font-weight: 600; padding: 5px 0;}
 
+.webview_cashmate .section_mb .list_box_menu{}
+.webview_cashmate .section_mb .list_box_menu .list_item{position: relative; border-bottom: 1px solid #f7f7f7; padding: 20px 0;}
+.webview_cashmate .section_mb .list_box_menu .list_item a{display: block; position: relative; font-size: 15px; font-size: 1.5rem;}
+.webview_cashmate .section_mb .list_box_menu .list_item .icon_arrow_right{float: right; margin: 5px 5px;}
+
 /* Section Style */
 
 .webview_cashmate .section_mb.section_mypoint .contents_top.main{padding: 20px 20px; margin-bottom: 10px;}
 .webview_cashmate .section_mb.section_mypoint .contents_top.main .content_mypoint{text-align: left;}
-.webview_cashmate .section_mb.section_mypoint .tabs_multi{margin: 0;}
+.webview_cashmate .section_mb.section_mypoint .contents_top.main .content_mypoint .item_mypoint{padding-right: 20px;}
+.webview_cashmate .section_mb.section_mypoint .tabs_multi{padding-top: 10px; margin: 0;}
 .webview_cashmate .section_mb.section_mypage .contents_top .guide_noti_box{text-align: left; padding: 20px 20px; margin-bottom: 0;}
-.webview_cashmate .section_mb.section_mypage .contents_top .guide_noti_box .noti_title{font-size: 15px; font-size: 1.5rem;}
 .webview_cashmate .section_mb.section_mypage .contents_top .content_mypoint .item_mypoint{padding: 0;}
 .webview_cashmate .section_mb.section_mypage .contents{padding: 0;}
 .webview_cashmate .section_mb.section_mypage .content_item{padding: 20px 20px;}
@@ -404,9 +410,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb.section_mypage .btn_action{border: 0; padding: 20px 20px;}
 .webview_cashmate .section_mb.section_mypage .item_logout{text-align: center; padding: 40px 0;}
 .webview_cashmate .section_mb.section_mypage .item_logout p{font-size: 15px; font-size: 1.5rem; margin-bottom: 20px;}
-.webview_cashmate .section_mb.section_mypage .list_box_menu{}
-.webview_cashmate .section_mb.section_mypage .list_box_menu .list_item{position: relative; border-bottom: 1px solid #f7f7f7; padding: 20px 0;}
-.webview_cashmate .section_mb.section_mypage .list_box_menu .list_item a{display: block; position: relative; font-size: 15px; font-size: 1.5rem;}
+
 
 .webview_cashmate .section_mb.section_point .contents{padding: 0;}
 .webview_cashmate .section_mb.section_point .guide_noti_box{padding: 20px 20px 10px;}
@@ -416,10 +420,11 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb.section_point .content_reward_ad .product_list .list_item{padding: 10px 0;}
 
 .webview_cashmate .section_mb.section_event .guide_noti_box{padding: 20px 20px; margin-bottom: 0;}
-.webview_cashmate .section_mb.section_event .contents{}
 .webview_cashmate .section_mb.section_event .content_event .content_list{padding-top: 20px; margin: 0;}
 
-.webview_cashmate .section_mb.section_event .content_event{}
+.webview_cashmate .section_mb.section_inquiry .guide_noti_box{padding: 20px 20px; margin-bottom: 0;}
+.webview_cashmate .section_mb.section_inquiry .contents{padding: 0;}
+.webview_cashmate .section_mb.section_inquiry .content_item{padding: 20px 20px;}
 
 
 @media screen and (max-width: 640px){
