--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -369,10 +369,10 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb .contents:last-child{margin-bottom: 0;}
 .webview_cashmate .section_mb .contents_top{display: block; padding: 0; margin-bottom: 0;}
 .webview_cashmate .section_mb .list_content{margin: 0;}
+.webview_cashmate .section_mb .content_item .form_group{padding: 0 0 10px;}
 
 
 /* 정리예정 */
-
 .webview_cashmate .section_mb .form_list{height: auto; overflow-y: hidden;}
 
 .webview_cashmate .section_mb .contents_top .guide_noti_box .icon_noti{display: none;}
@@ -404,7 +404,6 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .webview_cashmate .section_mb.section_mypage .contents_top .content_mypoint .item_mypoint{padding: 0;}
 .webview_cashmate .section_mb.section_mypage .contents{padding: 0;}
 .webview_cashmate .section_mb.section_mypage .content_item{padding: 20px 20px;}
-.webview_cashmate .section_mb.section_mypage .content_item .form_group{padding: 0 0 10px;}
 .webview_cashmate .section_mb.section_mypage .content_item .input_group .btn_input{width: 100%; padding: 4px 10px; margin-top: 10px;}
 .webview_cashmate .section_mb.section_mypage .input_width_md{width: 100% !important;}
 .webview_cashmate .section_mb.section_mypage .btn_action{border: 0; padding: 20px 20px;}
