--- a/clipdown/2023/webview/reward/resource/css/style_inflmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_inflmate.css
@@ -35,11 +35,8 @@ body{background: #202020;}
 .wrap {position: relative; width: 100%;}
 .wrap_popup{position: absolute; top:50%; left: 50%; transform: translate(-50%, -50%); width: 100%;}
 .wrap_popup .inner {position: relative; max-width: 398px; width: 100%; height: 100%; margin: 0 auto;}
-.wrap_popup .webview_box{background: #fff; padding : 25px 25px;}
+.wrap_popup .webview_box{background: #fff; padding : 25px 25px; border-radius: 0 0 10px 10px}
 .webview_box {height: 100%; text-align: center;}
-@media screen and (min-width : 601px) { 
-    .webview_box{border-radius: 0 0 10px 10px;}
-}
 .webview_box .content_box{padding-bottom: 10px;}
 .webview_box .content_box:last-child{padding-bottom: 0;}
 .webview_box .content_box .content_heading{font-size: 15px; font-size: 1.5rem; line-height: 1.5;}
