--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -99,7 +99,7 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .font_num{font-family: 'Poppins', Malgun Gothic, sans-serif; font-weight: 500;}
 .section{position: relative; overflow: hidden; padding: 0 20px;}
 .section .header_title{position: relative; border-bottom: 1px solid #ddd; padding: 20px 0 10px 0;}
-.section .header_title h1{font-size: 16px; font-size: 1.6rem; font-weight: 600; line-height: 2;}
+.section .header_title h1{font-size: 16px; font-size: 1.6rem; font-weight: 600; line-height: 2; padding: 0 20px;}
 .section .header_title h1 .summary{font-size: 13px; font-size: 1.3rem; font-weight: 400;}
 .section .list_content{margin: 20px 0;}
 
