--- a/clipdown/2023/webview/reward/resource/css/style_inflmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_inflmate.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 /* 
     * 2023-05-23 Style Update
     * 클립다운 PC 리뉴얼과 캐시메이트 신규 서비스 공통 webview 팝업UI 스타일 작업
@@ -79,7 +81,7 @@ body{background: #202020;}
 .webview_box .btn_full_gray{background: #a7a7a7; border: 1px solid #a7a7a7; color: #fff;}
 .webview_box .btn_block{display: block; width: 100%;}
 .webview_box .btn_md{font-size: 13px; font-size: 1.3rem; line-height: 1.3; padding: 6px 20px;}
-.webview_box .btn_lg{font-size: 15px; font-size: 1.5rem; padding: 7px 20px 8px 20px;}
+.webview_box .btn_lg{font-size: 14px; font-size: 1.4rem; padding: 7px 20px 8px 20px;}
 .webview_box .btn_action{text-align: center; margin: 0; border-top: 1px solid #ddd; padding: 20px 0; margin-top: 20px;}
 .webview_box .btn_action .btn{min-width: 110px; font-weight: 600; border-radius: 50px;}
 .webview_box .btn_area{margin: 20px 0 10px;}
@@ -199,13 +201,13 @@ body{background: #202020;}
     * [클립다운 PC 팝업] 클립다운 라이트 설치 확인
 */
 /* Point Badge Style */
-.wrap_popup .badge_point{display: inline-block; position: relative; min-width: 78px; height: 28px; background: #e21d19; color: #fff; text-align: center; line-height: 1.5; border-radius: 30px; padding: 4px 4px 4px 29px; -webkit-touch-callout: none; user-select: none;}
+.wrap_popup .badge_point{display: inline-block; position: relative; min-width: 78px; height: 28px; background: #e21d19; color: #fff; text-align: center; line-height: 1.5; border-radius: 30px; padding: 4px 4px 4px 25px; -webkit-touch-callout: none; user-select: none;}
 .wrap_popup .badge_point .icon_point{position: absolute; top:5px; left: 4px; width: 18px; height: 18px; background: #fff; color: #e21d19;  font-size: 14px; font-size: 1.4rem; font-weight: 700; line-height: 1; border-radius:50%; padding: 2px 4px;}
 .wrap_popup .badge_point .point_data{font-size: 14px; font-size: 1.4rem; font-weight: 700; line-height: 1.4; padding: 0 6px 0 0;}
 
 .wrap_popup .link_text{display: inline-block; color:#666; font-size: 11px; font-size: 1.1rem; text-decoration:none; padding-top: 10px;}
-.item_check_install{background: #f7f7f7; border: 1px solid #eee; padding: 20px 20px;}
-.item_check_install .content_text{font-weight: 600;}
+.item_check_install{padding: 0 20px;}
+.item_check_install .content_text{font-weight: 500;}
 .info_box_app{background: #fff; border: 1px solid #e21d19; padding: 6px 10px; margin: 15px 0 20px 0;}
 .info_box_app{display: flex; align-items: center;}
 .info_box_app .item_left{display: flex; flex: 1; align-items: center;}
