--- a/clipdown/2023/webview/reward/popup_mobileAuth/resource/css/style.css
+++ b/clipdown/2023/webview/reward/popup_mobileAuth/resource/css/style.css
@@ -115,3 +115,12 @@ div,dl,dt,dd,h1,h2,h3,h4,h5,h6,form,fieldset,p,th,td,input,textarea,select,butto
 .checkbox span:after, .radio span:after{content: ''; display: block; position: absolute; }
 .checkbox span:after{top: -1px; left: 4px; width: 5px; height: 10px; border: solid #eee; border-width: 0 2px 2px 0; transform: rotate(45deg);}
 .checkbox input:checked~span:after{top: -1px; left: 4px; width: 5px; height: 10px; border: solid #e21d19; border-width: 0 2px 2px 0; transform: rotate(45deg);}
+
+
+.m-radio input:checked~span{border: 1px solid #e21d19; background: #fff;}
+.m-radio input:checked~span:after{background: #e21d19 !important;}
+
+.list_input_result{position: relative; width: 100%; background: #f7f7f7; border: 1px solid #eee; padding: 10px 10px;}
+.list_input_result .item_list{position: relative; max-width: 130px; text-align: left; margin: 0 auto;}
+.list_input_result .item_list label{margin-bottom: 5px; line-height: 1.6;}
+.list_input_result .item_list:last-child label{margin-bottom: 0;}
