--- a/clipdown/2023/webview/reward/resource/css/style_cashmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_cashmate.css
@@ -300,14 +300,14 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 .section_event .content_top .btn_area .btn_event_invite:hover{background: #FED849; color: #102521;}
 .section_event .content_middle{position: relative; background: #fff; text-align: center; padding: 0 20px;}
 .section_event .content_middle .content_title{position: relative; padding: 60px 0 40px; text-align: center;}
-.section_event .content_middle .content_title h1{font-size: 28px; font-size: 2.8rem; font-weight: 600;}
+.section_event .content_middle .content_title h1{font-size: 28px; font-size: 2.8rem; font-weight: 600; letter-spacing: -1px;}
 .section_event .content_middle .content_box{position: relative; width: 100%; margin-bottom: 40px;}
 .section_event .content_box .item_title{text-align: left; border-bottom: 2px dotted #ddd; padding: 20px 0 10px;}
 .section_event .content_box .item_title h3{font-size: 18px; font-size: 1.8rem; font-weight: 600; letter-spacing: -1px;}
 .section_event .content_box .content_item{padding: 20px 0;}
 .section_event .content_box .content_item .content_text{padding-bottom: 10px;}
 .section_event .input_group.event, .section_event .input_group{display: table; position: relative; width: 100%; border-collapse: separate;}
-.section_event .input_group.event .form_input{width: 50%; min-width: 100px; border: 1px solid #666;}
+.section_event .input_group.event .form_input{width: 60%; min-width: 100px; border: 1px solid #666;}
 .section_event .input_group.event .btn_input{width: 20%; height: 34px; font-size: 12px; font-size: 1.2rem; margin-left: 5px; }
 .section_event .btn_group{padding: 20px 0;}
 .section_event .btn_group .btn{width: 40%; margin: 0 5px;}
@@ -315,7 +315,12 @@ svg{max-width: 100%; width: 100%; height: 100%;}
 @media screen and (max-width: 480px){
     .section_event .content_top .btn_area{bottom: 28%;}
     .section_event .content_top .btn_area .btn_event_invite{width: 36%; font-size: 13px; font-size: 1.3rem; padding: 3px 10px;}
-    .section_event .btn_group .btn{width: auto; margin: 0;}
+    .section_event .btn_group .btn{width: 100%; margin-bottom: 10px;}
+    .section_event .content_middle .content_box{margin-bottom: 20px}
+    .section_event .content_middle .content_title h1{font-size: 22px; font-size: 2.2rem;}
+    .section_event .content_box .item_title{ border-bottom: 2px dotted #ddd; padding: 20px 0 10px;}
+    .section_event .content_box .item_title h3{font-size: 15px; font-size: 1.5rem;}
+    
 }
 
 /* inquiry Page */
