--- a/clipdown/2023/webview/reward/resource/css/style_inflmate.css
+++ b/clipdown/2023/webview/reward/resource/css/style_inflmate.css
@@ -35,8 +35,8 @@ body{background: #202020;}
     
 */
 .wrap {position: relative; width: 100%;}
-.wrap_popup{position: absolute; top:50%; left: 50%; transform: translate(-50%, -50%); width: 100%;}
-.wrap_popup .inner {position: relative; max-width: 398px; width: 100%; height: 100%; margin: 0 auto;}
+.wrap_popup{position: absolute; top:50%; left: 50%; transform: translate(-50%, -50%); width: 100%; padding: 0 10px;}
+.wrap_popup .inner {position: relative; max-width: 398px; width: 100%; height: 100%; margin: 0 auto; min-width: 320px;}
 .wrap_popup .webview_box{background: #fff; padding : 25px 25px; border-radius: 0 0 10px 10px}
 .webview_box {height: 100%; text-align: center;}
 .webview_box .content_box{padding-bottom: 10px;}
@@ -111,7 +111,12 @@ body{background: #202020;}
 .join_info .form_join .list_scroll{height: 100px; overflow-y: scroll; border: 1px solid #eee;}
 .join_info .form_join .list_scroll li{padding: 2px 10px;}
 .join_info .form_auth .form_group{margin-bottom: 10px;}
+
+.join_info .form_auth .input_group{display: table; position: relative; width: 100%; border-collapse: separate;}
+.join_info .form_auth .input_group .form_control{width: 60%; min-width: 100px;}
+.join_info .form_auth .input_group .btn_input{width: 38%;}
 .join_info .form_auth .text_link{font-size:11px; font-size:1.1rem; color: #1a73e8;}
+
 
 .btn_wv_info{font-family: 'Roboto', sans-serif; color:#666; font-size: 14px; font-size: 1.4rem; font-weight: 500; text-align: center;}
 .btn_login_google{font-family: 'Roboto', sans-serif; width: 100%; background: #fff url("../images/icon_login_google.png") no-repeat 2rem 50%; background-size: 18px auto; padding: 10px 10px 10px 40px; border-top: 1px solid #f7f7f7; border-radius: 30px; -webkit-box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 28%); box-shadow: 0px 1px 1px 0px rgb(0 0 0 / 28%);}
@@ -168,7 +173,9 @@ body{background: #202020;}
 .label_control{font-size: 13px; font-size: 1.3rem; font-weight: 600; line-height: 1.5; vertical-align: middle; margin-bottom: 10px; padding: 4px 0;}
 .form_control{display: inline-block; width: 100%; height: 42px; background: #fff; border: 1px solid #ddd; padding: 7px 10px 5px 10px;}
 .input_group{margin-bottom: 10px;}
-.input_group .form_control{height: 34px; padding: 5px 5px;}
+.input_group .form_control{height: 42px; padding: 5px 5px;}
+.input_group .btn_input{min-width: 80px; font-size: 21px; font-size: 1.2rem; font-weight: 600; border-radius: 0; padding: 12px 10px;}
+.input_group .btn_input.disabled{border: 1px solid #ddd; color: #bbb; cursor: default;}
 .input_form{display: inline-block; position: relative; width: 100%; padding: 5px 0;}
 .input_form .time{position: absolute; top: 18px; right: 14px; color:#e21d19; font-size: 1.3rem; font-size: 13px; font-weight: 600;}
 .input_form .form_input_error{border: 1px solid #e21d19;}
